linux (3.16.7-ckt2-2) UNRELEASED; urgency=medium

  [ Ben Hutchings ]
  * [sh4] Build with gcc-4.8 (Closes: #772602)

  [ Ian Campbell ]
  * [armhf] Enable support for support OMAP5432 uEVM by enabling:
    TI_SOC_THERMAL, MFD_PALMAS, REGULATOR_PALMAS, REGULATOR_PBIAS,
    REGULATOR_TI_ABB, PINCTRL_PALMAS, GPIO_PALMAS, RTC_DRV_PALMAS,
    OMAP5_DSS_HDMI, DISPLAY_ENCODER_TPD12S015, DISPLAY_CONNECTOR_HDMI,
    USB_DWC3_OMAP, EXTCON_PALMAS, TI_EMIF and DDR.
    Based on a patch from Chen Baozi (Closes: #772953)

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 13 Dec 2014 11:45:48 +0000

linux (3.16.7-ckt2-1) unstable; urgency=high

  * New upstream stable update:
    http://kernel.ubuntu.com/stable/ChangeLog-3.16.7-ckt1
    - drm/tilcdc: Fix the error path in tilcdc_load()
    - usb: phy: return -ENODEV on failure of try_module_get
    - PM / clk: Fix crash in clocks management code if !CONFIG_PM_RUNTIME
    - rt2x00: support Ralink 5362.
    - wireless: rt2x00: add new rt2800usb devices
    - NFS: Fix /proc/fs/nfsfs/servers and /proc/fs/nfsfs/volumes
    - nfs: fix duplicate proc entries
    - mm: page_alloc: fix zone allocation fairness on UP
    - ext4: check EA value offset when loading
    - jbd2: free bh when descriptor block checksum fails
    - ext4: don't check quota format when there are no quota files
    - target: Fix queue full status NULL pointer for SCF_TRANSPORT_TASK_SENSE
    - vfs: fix data corruption when blocksize < pagesize for mmaped data
    - ext4: fix mmap data corruption when blocksize < pagesize
    - ext4: grab missed write_count for EXT4_IOC_SWAP_BOOT
    - qla_target: don't delete changed nacls
    - target: Fix APTPL metadata handling for dynamic MappedLUNs
    - iser-target: Disable TX completion interrupt coalescing
    - ext4: don't orphan or truncate the boot loader inode
    - ext4: add ext4_iget_normal() which is to be used for dir tree lookups
    - ext4: fix reservation overflow in ext4_da_write_begin