@@ -44,13 +44,11 @@ class CheckAbi(object):
 
         self.filename_new = "%s/Module.symvers" % dir
 
-        upstream_version = self.config['version',]['upstream']
         try:
-            version_abi = (upstream_version + '-' +
+            version_abi = (self.config['version',]['abiname_base'] + '-' +
                            self.config['abi', arch]['abiname'])
         except KeyError:
-            version_abi = (upstream_version + '-' +
-                           self.config['abi', ]['abiname'])
+            version_abi = self.config['version',]['abiname']
         self.filename_ref = "debian/abi/%s/%s_%s_%s" % (version_abi, arch, featureset, flavour)
 
     def __call__(self, out):
