@@ -2,6 +2,8 @@ linux (3.16.7-ckt2-2) UNRELEASED; urgency=medium
 
   [ Ben Hutchings ]
   * [sh4] Build with gcc-4.8 (Closes: #772602)
+  * Fix inconsistent ABI name generation in
+    debian/bin/{abiupdate,buildcheck,gencontrol}.py (Closes: #773233)
 
   [ Ian Campbell ]
   * [armhf] Enable support for support OMAP5432 uEVM by enabling:
